<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
  This file specifies metadata for the ezrassor_topic_switch ROS package.

  This file and setup.py are required in ROS 2. Some metadata listed below are
  duplicated in setup.py. This metadata must be identical in both files.

  references:
    index.ros.org/doc/ros2/Tutorials/Creating-Your-First-ROS2-Package
-->
<package format="3">
  <name>ezrassor_topic_switch</name>
  <version>2.0.0</version>
  <description>Route topic messages on the EZRASSOR.</description>
  <url type="website">https://github.com/FlaSpaceInst/ezrassor_topic_switch</url>
  <maintainer email="ez.rassor@gmail.com">EZRASSOR Team</maintainer>
  <author email="ez.rassor@gmail.com">EZRASSOR Team</author>
  <license>MIT</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend version_gte="6.0.0">python3-pytest</test_depend>

  <exec_depend>launch_testing</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
